Fixed numbers getting out of display, now it wraps as intended, fixed DEL button, added decimal support. It's all working now. TODO: add keyboard support

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 #calc {
     display: flex;
     min-height: 95vh;
-    height: 100vh;
+    height: 98vh;
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -34,6 +34,8 @@ body {
     padding: 10px;
     border-radius: 1%;
     margin-bottom: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 button {
